@@ -1,5 +1,12 @@
 2010-08-13  MIYAMUKO Katsuyuki
 
+	* 検索結果を保持する構造体と他の構造体で似ているスロットは
+	名前などをできる限り合わせるようにした
+
+	* 検索結果を保持する構造体名を変更
+	users => searched-user
+	repos => searched-repo
+
 	* 構造体のアクセッサと API を区別しにくいので、API は動詞で
 	始めるようにした。
 	また、シンボル名には github- という prefix を付けないようにした。
